The wrapping element's CSS class name is now 'tse-scrollable' rather than 'wrapper'. The name change is to avoid potential CSS conflicts, since 'wrapper' is such a commonly used class name.

--- a/css/trackpad-scroll-emulator.css
+++ b/css/trackpad-scroll-emulator.css
@@ -1,24 +1,24 @@
 /**
- * Trackpad-style Scrollbar.
+ * TrackpadScrollEmulator
  * Author: Jonathan Nicol @f6design
  */
- .wrapper {
+ .tse-scrollable {
   position: relative;
   width: 200px; /* Default value. Overwite this if you want. */
   height: 300px; /* Default value. Overwite this if you want. */
   overflow: hidden;
   }
-  .wrapper .scroll-content,
-  .wrapper .content {
+  .tse-scrollable .scroll-content,
+  .tse-scrollable .content {
     overflow-x: hidden;
     overflow-y: scroll;
     }
-    .wrapper .content {
+    .tse-scrollable .content {
       /* Default height, used as a fallback for non-JS clients.
-      If you overwite .wrapper's height, overwrite this too. */
+      If you overwite .tse-scrollable's height, overwrite this too. */
       height: 300px;
       }
-.scrollbar {
+.tse-scrollable .scrollbar {
   z-index: 99;
   position: absolute;
   top: 0;
@@ -26,7 +26,7 @@
   bottom: 0;
   width: 10px;
   }
-  .scrollbar .drag-handle {
+  .tse-scrollable .scrollbar .drag-handle {
     position: absolute;
     right: 2px;
     -webkit-border-radius: 6px;
@@ -44,7 +44,7 @@
     -webkit-background-clip: padding-box;
     -moz-background-clip: padding;
     }
-  .scrollbar:hover .drag-handle {
+  .tse-scrollable .scrollbar:hover .drag-handle {
     /* When hovered, remove all transitions from drag handle */
     opacity: 0.7;
     -webkit-transition: opacity 0 linear;
@@ -53,6 +53,6 @@
     -ms-transition: opacity 0 linear;
     transition: opacity 0 linear;
     }
-    .scrollbar .drag-handle.visible {
+    .tse-scrollable .scrollbar .drag-handle.visible {
       opacity: 0.7;
       }
